--- a/Sentiment Analysis/script.ipynb
+++ b/Sentiment Analysis/script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,15 +223,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'compound': 0.17103038538467244, 'neg': 0.053342289213765756, 'neu': 0.7039266346372145, 'pos': 0.2393503103284715}\n",
-      "pos: 81.77532014912862, neg: 18.224679850871382\n"
+      "{'compound': 0.1480606156274666, 'neg': 0.07638595106550902, 'neu': 0.6853930544593524, 'pos': 0.23743172849250221}\n",
+      "pos: 75.65913074971019, neg: 24.340869250289813\n"
      ]
     }
    ],
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,18 +253,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "acc_df.to_csv('acc_df.csv')\n",
-    "msg_df.to_csv('msg_df.csv')"
+    "acc_d = {}\n",
+    "for index_r, row in acc_df.iterrows():\n",
+    "    acc_d[index_r] = {}\n",
+    "    for index_c, cell in row.items():\n",
+    "        acc_d[index_r][index_c] = cell\n",
+    "\n",
+    "msg_d = {}\n",
+    "for index_r, row in msg_df.iterrows():\n",
+    "    msg_d[index_r] = {}\n",
+    "    for index_c, cell in row.items():\n",
+    "        msg_d[index_r][index_c] = cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('acc_d.json', 'w') as f:\n",
+    "    json.dump(acc_d, f, indent=4)\n",
+    "with open('msg_d.json', 'w') as f:\n",
+    "    json.dump(msg_d, f, indent=4)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('stable')",
+   "display_name": "Python 3.9.13 ('blockchain')",
    "language": "python",
    "name": "python3"
   },
@@ -283,7 +304,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "731c43eb56f848c5bca9de05efde814bd49b40cfac306b2f8be57987981a1007"
+    "hash": "93f22f4d4f0cf103124be230d217caee56206290cfe5f504a87707d671b2908a"
    }
   }
  },
