--- a/Weapon Balancing/script.ipynb
+++ b/Weapon Balancing/script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,20 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate(filename_in, filename_out):\n",
+    "def evaluate(filename_in, fixed_perc):\n",
     "    df = pd.read_csv(filename_in)\n",
     "    df = df.drop(columns=['Horodateur', 'Nickname', 'Comments'])\n",
-    "    fixed_perc = 10\n",
     "    N = df.shape[0]\n",
     "    d = {col: {'tot':0, '#':0} for col in df.columns}\n",
     "    for _, row in df.iterrows():\n",
     "        for col in d.keys():\n",
     "            if traslate(row[col]) != 0:\n",
-    "                d[col]['tot'] += traslate(row[col])*10\n",
+    "                d[col]['tot'] += traslate(row[col])*fixed_perc\n",
     "                d[col]['#'] += 1\n",
     "    results = {k:v['tot']/v['#'] for k, v in d.items()}\n",
     "    new_results = {}\n",
@@ -54,6 +53,7 @@
     "        if k1 not in new_results.keys():\n",
     "            new_results[k1] = {}\n",
     "        new_results[k1][k2] = v\n",
+    "    filename_out = 'results_{}.json'.format(fixed_perc)\n",
     "    with open(filename_out, 'w') as f:\n",
     "        json.dump(new_results, f, indent=4)\n",
     "    return"
@@ -61,21 +61,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename_in = 'Cantina Royale weapons balancing survey.csv'\n",
-    "filename_out = 'results.json'"
+    "filename_in = 'Cantina Royale weapons balancing survey.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluate(filename_in, filename_out)"
+    "evaluate(filename_in, 5)\n",
+    "evaluate(filename_in, 10)"
    ]
   }
  ],
