--- a/NFT data/02_get_verko_data.ipynb
+++ b/NFT data/02_get_verko_data.ipynb
@@ -32,7 +32,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 13%|█▎        | 1821/14166 [07:59<52:15,  3.94it/s]  "
+      " 71%|███████   | 10023/14166 [43:45<18:04,  3.82it/s] "
      ]
     }
    ],
@@ -45,6 +45,15 @@
     "    headers = {'User-Agent': user_agent}\n",
     "    response = requests.get(verko_url, headers=headers)\n",
     "    data[nft]['verko'] = response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json.dumps(data, indent=4)"
    ]
   }
  ],
