--- a/NFT data/02_get_verko_data.ipynb
+++ b/NFT data/02_get_verko_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 71%|███████   | 10023/14166 [43:45<18:04,  3.82it/s] "
+      "100%|██████████| 14166/14166 [00:00<00:00, 1448405.99it/s]\n"
      ]
     }
    ],
@@ -49,11 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "json.dumps(data, indent=4)"
+    "with open(filename, 'w') as f:\n",
+    "    json.dump(data, f, indent=4)"
    ]
   }
  ],
