--- a/NFT data/01_get_json.ipynb
+++ b/NFT data/01_get_json.ipynb
@@ -2,29 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests \n",
     "import time\n",
     "from tqdm import tqdm\n",
-    "import json"
+    "import json\n",
+    "from fake_useragent import UserAgent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection = 'GSPACEAPE-08bc2b'\n",
+    "collection = 'CEA-2d29f9'\n",
     "sleep_time = 0.4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,24 +35,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nftCount = collection_info['nftCount']\n",
+    "# nftCount = collection_info['nftCount']\n",
+    "nftCount = 2043\n",
     "nfts = {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 14166/14166 [00:00<00:00, 766486.63it/s]\n"
+      "100%|██████████| 2043/2043 [00:00<00:00, 960215.49it/s]\n"
      ]
     }
    ],
@@ -66,12 +68,14 @@
     "        continue\n",
     "    time.sleep(sleep_time)\n",
     "    url = f'https://api.elrond.com/nfts/{identifier}'\n",
-    "    nfts[identifier] = requests.get(url).json()"
+    "    user_agent = UserAgent().random\n",
+    "    headers = {'User-Agent': user_agent}\n",
+    "    nfts[identifier] = requests.get(url, headers=headers).json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
