--- a/NFT data/02_get_verko_data.ipynb
+++ b/NFT data/02_get_verko_data.ipynb
@@ -18,21 +18,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'GSPACEAPE-08bc2b/GSPACEAPE-08bc2b_nfts.json'\n",
-    "with open(filename) as f:\n",
+    "collection = 'CEA-2d29f9'\n",
+    "with open(f'{collection}_nfts.json') as f:\n",
     "    data = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 14166/14166 [00:00<00:00, 1448405.99it/s]\n"
+      "100%|██████████| 2043/2043 [00:00<00:00, 1011445.12it/s]\n"
      ]
     }
    ],
@@ -49,11 +49,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(filename, 'w') as f:\n",
+    "with open(f'{collection}_nfts.json', 'w') as f:\n",
     "    json.dump(data, f, indent=4)"
    ]
   }
