--- a/NFT data/03_get_csv.ipynb
+++ b/NFT data/03_get_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection = 'GSPACEAPE-08bc2b'"
+    "collection = 'CEA-2d29f9'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
     "    'id': [],\n",
     "    'rank': [],\n",
     "}\n",
-    "if collection == 'GSPACEAPE-08bc2b':\n",
+    "if collection == 'GSPACEAPE-08bc2b' or collection == 'CEA-2d29f9':\n",
     "    nfts_data['stats'] = []\n",
     "traits_data = {}\n",
     "for nft in json_data.values():\n",
@@ -53,7 +53,7 @@
     "    nfts_data['thumbnailUrl'].append(nft['media'][0]['thumbnailUrl'])\n",
     "    nfts_data['id'].append(nft['metadata']['id'])\n",
     "    nfts_data['rank'].append(nft['rank'])\n",
-    "    if collection == 'GSPACEAPE-08bc2b':\n",
+    "    if collection == 'GSPACEAPE-08bc2b' or collection == 'CEA-2d29f9':\n",
     "        nfts_data['stats'].append(nft['metadata']['stats'])\n",
     "    traits_data[nft['identifier']] = {}\n",
     "    for trait in nft['metadata']['attributes']:\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
