--- a/NFT data/04_get_transactions.ipynb
+++ b/NFT data/04_get_transactions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,23 +11,24 @@
     "from tqdm import tqdm\n",
     "import json\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "from fake_useragent import UserAgent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection = 'GSPACEAPE-08bc2b'\n",
+    "collection = 'CEA-2d29f9'\n",
     "chunk_size = 50\n",
     "sleep_time = 0.4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 14166/14166 [00:00<00:00, 23649.70it/s]\n"
+      "100%|██████████| 2043/2043 [00:00<00:00, 22584.31it/s]\n"
      ]
     }
    ],
@@ -71,17 +72,21 @@
     "    }\n",
     "    time.sleep(sleep_time)\n",
     "    url = f'https://api.elrond.com/nfts/{identifier}/transactions/count'\n",
-    "    count = requests.get(url).json()\n",
+    "    user_agent = UserAgent().random\n",
+    "    headers = {'User-Agent': user_agent}\n",
+    "    count = requests.get(url, headers=headers).json()\n",
     "    transactions_data[identifier]['count'] = count\n",
     "    for index in range(0, count, chunk_size):\n",
     "        time.sleep(sleep_time)\n",
     "        url = f'https://api.elrond.com/nfts/{identifier}/transactions?from={index}&size={chunk_size}'\n",
-    "        transactions_data[identifier]['transactions'] += requests.get(url).json()"
+    "        user_agent = UserAgent().random\n",
+    "        headers = {'User-Agent': user_agent}\n",
+    "        transactions_data[identifier]['transactions'] += requests.get(url, headers=headers).json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,16 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "110566"
+       "20762"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
