--- a/NFT data/03_get_csv.ipynb
+++ b/NFT data/03_get_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,12 +57,18 @@
     "        nfts_data['stats'].append(nft['metadata']['stats'])\n",
     "    traits_data[nft['identifier']] = {}\n",
     "    for trait in nft['metadata']['attributes']:\n",
-    "        traits_data[nft['identifier']][trait['trait_type']] = trait['value']"
+    "        traits_data[nft['identifier']][trait['trait_type']] = trait['value']\n",
+    "    for k, v in nft['verko']['gameData'][0]['dynamicData'].items():\n",
+    "        if k == 'talents':\n",
+    "            for talent in v:\n",
+    "                traits_data[nft['identifier']][talent['name']] = talent['value']\n",
+    "        else:\n",
+    "            traits_data[nft['identifier']][k] = v"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
