--- a/NFT data/04_get_transactions.ipynb
+++ b/NFT data/04_get_transactions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,17 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2043/2043 [00:00<00:00, 22584.31it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for _, nft in tqdm(data.iterrows(), total=data.shape[0]):\n",
     "    identifier = nft['identifier']\n",
@@ -68,6 +60,7 @@
     "        continue\n",
     "    transactions_data[identifier] = {\n",
     "        'count': -1,\n",
+    "        'tmp': [],\n",
     "        'transactions': []\n",
     "    }\n",
     "    time.sleep(sleep_time)\n",
@@ -81,12 +74,19 @@
     "        url = f'https://api.elrond.com/nfts/{identifier}/transactions?from={index}&size={chunk_size}'\n",
     "        user_agent = UserAgent().random\n",
     "        headers = {'User-Agent': user_agent}\n",
-    "        transactions_data[identifier]['transactions'] += requests.get(url, headers=headers).json()"
+    "        transactions_data[identifier]['tmp'] += requests.get(url, headers=headers).json()\n",
+    "    for transaction in transactions_data[identifier]['tmp']:\n",
+    "        time.sleep(sleep_time)\n",
+    "        url = f'https://api.elrond.com/transactions/{transaction[\"hash\"]}'\n",
+    "        user_agent = UserAgent().random\n",
+    "        headers = {'User-Agent': user_agent}\n",
+    "        transactions_data[identifier]['transactions'].append({**requests.get(url, headers=headers).json(), **transaction})\n",
+    "    del transactions_data[identifier]['tmp']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,20 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20762"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = 0 \n",
     "for identifier in transactions_data:\n",
@@ -134,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
