--- a/NFT data/04_get_transactions.ipynb
+++ b/NFT data/04_get_transactions.ipynb
@@ -21,14 +21,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection = 'CEA-2d29f9'\n",
+    "collection = 'CEA-2d29f9/CEA-2d29f9'\n",
     "chunk_size = 50\n",
     "sleep_time = 0.4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,9 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2043/2043 [00:00<00:00, 33916.20it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "for _, nft in tqdm(data.iterrows(), total=data.shape[0]):\n",
     "    identifier = nft['identifier']\n",
@@ -60,33 +68,25 @@
     "        continue\n",
     "    transactions_data[identifier] = {\n",
     "        'count': -1,\n",
-    "        'tmp': [],\n",
     "        'transactions': []\n",
     "    }\n",
     "    time.sleep(sleep_time)\n",
-    "    url = f'https://api.elrond.com/nfts/{identifier}/transactions/count'\n",
+    "    url = f'https://api.elrond.com/transfers/count?token={identifier}'\n",
     "    user_agent = UserAgent().random\n",
     "    headers = {'User-Agent': user_agent}\n",
     "    count = requests.get(url, headers=headers).json()\n",
     "    transactions_data[identifier]['count'] = count\n",
     "    for index in range(0, count, chunk_size):\n",
     "        time.sleep(sleep_time)\n",
-    "        url = f'https://api.elrond.com/nfts/{identifier}/transactions?from={index}&size={chunk_size}'\n",
+    "        url = f'https://api.elrond.com/transfers?from={index}&size={chunk_size}&token={identifier}&withScamInfo=true&withUsername=true&withBlockInfo=true'\n",
     "        user_agent = UserAgent().random\n",
     "        headers = {'User-Agent': user_agent}\n",
-    "        transactions_data[identifier]['tmp'] += requests.get(url, headers=headers).json()\n",
-    "    for transaction in transactions_data[identifier]['tmp']:\n",
-    "        time.sleep(sleep_time)\n",
-    "        url = f'https://api.elrond.com/transactions/{transaction[\"hash\"]}'\n",
-    "        user_agent = UserAgent().random\n",
-    "        headers = {'User-Agent': user_agent}\n",
-    "        transactions_data[identifier]['transactions'].append({**requests.get(url, headers=headers).json(), **transaction})\n",
-    "    del transactions_data[identifier]['tmp']"
+    "        transactions_data[identifier]['transactions'] += requests.get(url, headers=headers).json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "51742"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c = 0 \n",
     "for identifier in transactions_data:\n",
