--- a/NFT data/04_get_transactions.ipynb
+++ b/NFT data/04_get_transactions.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection = 'CEA-2d29f9/CEA-2d29f9'\n",
+    "collection = 'EAPES-8f3c1f/EAPES-8f3c1f'\n",
     "chunk_size = 50\n",
     "sleep_time = 0.4"
    ]
@@ -50,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2043/2043 [00:00<00:00, 33916.20it/s]\n"
+      "  0%|          | 42/10000 [01:54<11:47:26,  4.26s/it]"
      ]
     }
    ],
