--- a/XOXNO scraper/weapon/scraper1.ipynb
+++ b/XOXNO scraper/weapon/scraper1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,32 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "options = webdriver.ChromeOptions()\n",
-    "options.add_argument(\"start-maximized\")\n",
-    "\n",
+    "options = webdriver.FirefoxOptions()\n",
     "# options.add_argument(\"--headless\")\n",
-    "\n",
-    "options.add_experimental_option(\"excludeSwitches\", [\"enable-automation\"])\n",
-    "options.add_experimental_option('useAutomationExtension', False)\n",
-    "driver = webdriver.Chrome(options=options)\n",
-    "\n",
-    "stealth(driver,\n",
-    "        languages=[\"en-US\", \"en\"],\n",
-    "        vendor=\"Google Inc.\",\n",
-    "        platform=\"Win32\",\n",
-    "        webgl_vendor=\"Intel Inc.\",\n",
-    "        renderer=\"Intel Iris OpenGL Engine\",\n",
-    "        fix_hairline=True,\n",
-    "        )"
+    "driver = webdriver.Firefox(options=options)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,57 +44,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "driver.get(collection)\n",
-    "time.sleep(3)"
+    "time.sleep(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def foo(data, driver):\n",
-    "    for item in driver.find_elements(By.CLASS_NAME, \"virtuoso-grid-item\"):\n",
-    "        src = item.find_element(By.TAG_NAME, \"img\").get_attribute(\"src\")\n",
-    "        if src == 'https://xoxno.com/img/tokens/egld.svg':\n",
+    "def foo(data, driver): \n",
+    "    for item in driver.find_elements(By.XPATH, '/html/body/div[1]/div[1]/main/div/div[2]/div[4]/div/div/div/*'):\n",
+    "        if item.text.startswith('Liquid sell for'):\n",
     "            continue\n",
-    "        id = src.split('/')[-1].split('.')[0]\n",
-    "        price = float(item.find_element(By.CLASS_NAME, \"price-text\").text)\n",
+    "        item = item.find_element(By.TAG_NAME, \"a\")\n",
+    "        id = item.get_attribute(\"href\").split('/')[-1]\n",
+    "        currency = item.find_element(By.XPATH, \"./div/div/div[3]/div[1]/div/div/img\").get_attribute(\"src\").split('/')[-1].split('.')[0]\n",
+    "        amount = item.find_element(By.XPATH, \"./div/div/div[3]/div[1]/div/div/span\").text\n",
+    "        amount = float(amount.replace('K', ''))*1000 if 'K' in amount else float(amount)\n",
     "        data[id] = {\n",
-    "            'price': price\n",
+    "            'price': {\n",
+    "                'currency': currency,\n",
+    "                'amount': amount\n",
+    "            }\n",
     "        }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "h=0\n",
+    "# scroll to the bottom\n",
+    "last_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
     "while True:\n",
-    "    l = len(data)\n",
     "    foo(data, driver)\n",
-    "    time.sleep(3)\n",
-    "    h+=1000\n",
-    "    driver.execute_script(f\"window.scrollTo(0, {h})\")\n",
-    "    if 18.9 in data.values():\n",
-    "        break"
+    "    driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
+    "    time.sleep(10)\n",
+    "    new_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "    driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
+    "    time.sleep(10)\n",
+    "    if new_height == last_height:\n",
+    "        foo(data, driver)\n",
+    "        break\n",
+    "    last_height = new_height"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('data.json', 'w') as f:\n",
     "    json.dump(data, f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo(data, driver)"
    ]
   }
  ],
@@ -128,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
