--- a/XOXNO scraper/analysis.ipynb
+++ b/XOXNO scraper/analysis.ipynb
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
        " (1.21, 2, 'Boomstick-X', 'CRWEAPONS-e5ab49-01d9')]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,25 +1646,16 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1567743240.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[16], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    https://xoxno.com/nft/CRWEAPONS-e5ab49-0d27\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "https://xoxno.com/nft/CRWEAPONS-e5ab49-0d27\n",
-    "https://xoxno.com/nft/CRWEAPONS-e5ab49-0c61\n",
-    "https://xoxno.com/nft/CRWEAPONS-e5ab49-0b5a"
+    "# https://xoxno.com/nft/CRWEAPONS-e5ab49-0d27\n",
+    "# https://xoxno.com/nft/CRWEAPONS-e5ab49-0c61\n",
+    "# https://xoxno.com/nft/CRWEAPONS-e5ab49-0b5a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1674,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1683,7 +1674,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp.to_csv('weapons_xoxno.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1903,7 +1903,7 @@
        "51   0.372      3  Mortar Gun X  CRWEAPONS-e5ab49-0fe3    0.041333"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1914,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2107,7 +2107,7 @@
        "161  0.150      2  Mortar Gun X  CRWEAPONS-e5ab49-0d84    0.050000"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2118,7 +2118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2239,7 +2239,7 @@
        "118  0.150      2  Tesla Gun X  CRWEAPONS-e5ab49-0807    0.050000"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
