--- a/new/get_data.ipynb
+++ b/new/get_data.ipynb
@@ -18,18 +18,12 @@
    "outputs": [],
    "source": [
     "collections = ['CRMYTH-546419', 'CRWEAPONS-e5ab49', 'GSPACEAPE-08bc2b', 'CEA-2d29f9', 'CRCHAMPS-d0265d', 'CRHEROES-9edff2', 'EAPES-8f3c1f']\n",
-    "info = False\n",
-    "nfts_json = False\n",
-    "nfts_csv = False\n",
-    "txs = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "operations = {\n",
+    "    'info': True,\n",
+    "    'nfts_json': True,\n",
+    "    'nfts_csv': True,\n",
+    "    'txs': False\n",
+    "}\n",
     "params = {\n",
     "    'CRMYTH-546419': {\n",
     "        'sleep_time': 0.6,\n",
@@ -108,13 +102,13 @@
    "outputs": [],
    "source": [
     "for collection_name in collections:\n",
-    "    if info:\n",
+    "    if operations['info']:\n",
     "        get_collection_info(collection_name)\n",
-    "    if nfts_json:\n",
+    "    if operations['nfts_json']:\n",
     "        get_collection_nfts_json(collection_name)\n",
-    "    if nfts_csv:\n",
+    "    if operations['nfts_csv']:\n",
     "        get_collection_nfts_csv(collection_name)\n",
-    "    if txs:\n",
+    "    if operations['txs']:\n",
     "        get_collection_txs(collection_name)"
    ]
   }
