--- a/new/get_data.ipynb
+++ b/new/get_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,15 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "collections = ['CRMYTH-546419', 'CRWEAPONS-e5ab49', 'GSPACEAPE-08bc2b', 'CEA-2d29f9', 'CRCHAMPS-d0265d', 'CRHEROES-9edff2', 'EAPES-8f3c1f']\n",
+    "collections = ['CRWEAPONS-e5ab49']\n",
     "operations = {\n",
-    "    'info': True,\n",
-    "    'nfts_json': True,\n",
-    "    'nfts_csv': True,\n",
+    "    'info': False,\n",
+    "    'nfts_json': False,\n",
+    "    'nfts_csv': False,\n",
     "    'txs': False\n",
     "}\n",
     "params = {\n",
@@ -111,6 +112,17 @@
     "    if operations['txs']:\n",
     "        get_collection_txs(collection_name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dtale\n",
+    "d = dtale.show(pd.read_csv('data/CRWEAPONS-e5ab49_nfts.csv'))\n",
+    "d.open_browser()"
+   ]
   }
  ],
  "metadata": {
@@ -129,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
