--- a/new/get_data.ipynb
+++ b/new/get_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,33 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-<<<<<<< Updated upstream
     "collections = ['CRMYTH-546419', 'CRWEAPONS-e5ab49', 'GSPACEAPE-08bc2b', 'CEA-2d29f9', 'CRCHAMPS-d0265d', 'CRHEROES-9edff2', 'EAPES-8f3c1f']\n",
-    "collections = ['CRWEAPONS-e5ab49']\n",
     "operations = {\n",
-    "    'info': False,\n",
-    "    'nfts_json': False,\n",
-    "    'nfts_csv': False,\n",
-=======
-<<<<<<< HEAD
-    "collections = ['CRMYTH-546419', 'CRWEAPONS-e5ab49', 'GSPACEAPE-08bc2b', 'CEA-2d29f9', 'CRCHAMPS-d0265d', 'CRHEROES-9edff2']\n",
-    "operations = {\n",
-    "    'info': False,\n",
-    "    'nfts_json': False,\n",
+    "    'info': True,\n",
+    "    'nfts_json': True,\n",
     "    'nfts_csv': True,\n",
-=======
-    "collections = ['CRMYTH-546419', 'CRWEAPONS-e5ab49', 'GSPACEAPE-08bc2b', 'CEA-2d29f9', 'CRCHAMPS-d0265d', 'CRHEROES-9edff2', 'EAPES-8f3c1f']\n",
-    "collections = ['CRWEAPONS-e5ab49']\n",
-    "operations = {\n",
-    "    'info': False,\n",
-    "    'nfts_json': False,\n",
-    "    'nfts_csv': False,\n",
->>>>>>> cde720041a79a08bee099676ed521080a18070b0
->>>>>>> Stashed changes
     "    'txs': False\n",
     "}\n",
     "params = {\n",
@@ -128,36 +110,6 @@
     "        get_collection_nfts_csv(collection_name)\n",
     "    if operations['txs']:\n",
     "        get_collection_txs(collection_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-<<<<<<< Updated upstream
-   "execution_count": 6,
-=======
-<<<<<<< HEAD
-   "execution_count": 5,
-=======
-   "execution_count": 6,
->>>>>>> cde720041a79a08bee099676ed521080a18070b0
->>>>>>> Stashed changes
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import dtale\n",
-<<<<<<< Updated upstream
-    "d = dtale.show(pd.read_csv('data/CRWEAPONS-e5ab49_nfts.csv'))\n",
-    "d.open_browser()"
-=======
-<<<<<<< HEAD
-    "for collection_name in collections:\n",
-    "    d = dtale.show(pd.read_csv(f'data/{collection_name}_nfts.csv'))\n",
-    "    d.open_browser()"
-=======
-    "d = dtale.show(pd.read_csv('data/CRWEAPONS-e5ab49_nfts.csv'))\n",
-    "d.open_browser()"
->>>>>>> cde720041a79a08bee099676ed521080a18070b0
->>>>>>> Stashed changes
    ]
   }
  ],
