--- a/new/get_data.ipynb
+++ b/new/get_data.ipynb
@@ -2,26 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "import multiversx_utils as mu\n",
     "import json\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "data_folder_path = 'data'\n",
     "collections = ['CRMYTH-546419', 'CRWEAPONS-e5ab49', 'GSPACEAPE-08bc2b', 'CEA-2d29f9', 'CRCHAMPS-d0265d', 'CRHEROES-9edff2', 'EAPES-8f3c1f']\n",
     "operations = {\n",
     "    'info': True,\n",
-    "    'nfts_json': True,\n",
-    "    'nfts_csv': True,\n",
+    "    'nfts_raw': True,\n",
+    "    'nfts_processed': True,\n",
     "    'txs': False\n",
     "}\n",
     "params = {\n",
@@ -58,27 +60,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_collection_info(collection_name):\n",
+    "def get_collection_info(collection_name, collection_folder_path):\n",
     "    collection_info = mu.get_collection_info(collection_name)\n",
-    "    with open(f'data/{collection_name}_info.json', 'w') as f:\n",
+    "    filename = os.path.join(collection_folder_path, 'info.json')\n",
+    "    with open(filename, 'w') as f:\n",
     "        json.dump(collection_info, f, indent=4)\n",
+    "    return\n",
     "\n",
-    "def get_collection_nfts_json(collection_name):\n",
+    "def get_collection_nfts_raw(collection_name, collection_folder_path, params):\n",
     "    collection_nfts = mu.get_collection_nfts(collection_name)\n",
     "    sleep_time = params[collection_name]['sleep_time']\n",
     "    whitelist = params[collection_name]['whitelist']\n",
     "    collection_offchain_data = mu.get_collection_offchain_data(collection_nfts, sleep_time=sleep_time, whitelist=whitelist)\n",
     "    for identifier in collection_nfts:\n",
     "        collection_nfts[identifier]['offchain_data'] = collection_offchain_data[identifier]\n",
-    "    with open(f'data/{collection_name}_nfts.json', 'w') as f:\n",
+    "    filename = os.path.join(collection_folder_path, 'nfts_raw.json')\n",
+    "    with open(filename, 'w') as f:\n",
     "        json.dump(collection_nfts, f, indent=4)\n",
+    "    return\n",
     "\n",
-    "def get_collection_nfts_csv(collection_name):\n",
-    "    with open(f'data/{collection_name}_nfts.json', 'r') as f:\n",
+    "def get_collection_nfts_processed(collection_name, collection_folder_path):\n",
+    "    filename = os.path.join(collection_folder_path, 'nfts_raw.json')\n",
+    "    with open(filename, 'r') as f:\n",
     "        collection_nfts = json.load(f)\n",
     "    collection = {}\n",
     "    for nft in collection_nfts.values():\n",
@@ -87,29 +94,55 @@
     "            if key not in collection:\n",
     "                collection[key] = []\n",
     "            collection[key].append(value)\n",
-    "    pd.DataFrame(collection).to_csv(f'data/{collection_name}_nfts.csv', index=False)\n",
+    "    filename = os.path.join(collection_folder_path, 'nfts_processed.csv')\n",
+    "    collection = pd.DataFrame(collection)\n",
+    "    collection.to_csv(filename, index=False)\n",
+    "    collection.index = collection['identifier']\n",
+    "    collection = collection.to_dict('index')\n",
+    "    for identifier, data in collection.items():\n",
+    "        for key, value in data.items():\n",
+    "            if pd.isna(value):\n",
+    "                collection[identifier][key] = None\n",
+    "    filename = os.path.join(collection_folder_path, 'nfts_processed.json')\n",
+    "    with open(filename, 'w') as f:\n",
+    "        json.dump(collection, f, indent=4)\n",
+    "    return\n",
     "\n",
-    "def get_collection_txs(collection_name):\n",
+    "def get_collection_txs(collection_name, collection_folder_path):\n",
     "    collection_txs = mu.get_collection_txs(collection_name)\n",
-    "    with open(f'data/{collection_name}_txs.json', 'w') as f:\n",
-    "        json.dump(collection_txs, f, indent=4)"
+    "    filename = os.path.join(collection_folder_path, 'txs.json')\n",
+    "    with open(filename, 'w') as f:\n",
+    "        json.dump(collection_txs, f, indent=4)\n",
+    "    return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "get_collection_nfts('CRMYTH-546419'): 100%|██████████| 584/584 [00:03<00:00, 192.86it/s]\n",
+      "get_collection_offchain_data('CRMYTH-546419'): 100%|██████████| 584/584 [10:20<00:00,  1.06s/it]  \n"
+     ]
+    }
+   ],
    "source": [
     "for collection_name in collections:\n",
+    "    collection_folder_path = os.path.join(data_folder_path, collection_name)\n",
+    "    if not os.path.exists(collection_folder_path):\n",
+    "        os.makedirs(collection_folder_path)\n",
     "    if operations['info']:\n",
-    "        get_collection_info(collection_name)\n",
-    "    if operations['nfts_json']:\n",
-    "        get_collection_nfts_json(collection_name)\n",
-    "    if operations['nfts_csv']:\n",
-    "        get_collection_nfts_csv(collection_name)\n",
+    "        get_collection_info(collection_name, collection_folder_path)\n",
+    "    if operations['nfts_raw']:\n",
+    "        get_collection_nfts_raw(collection_name, collection_folder_path, params)\n",
+    "    if operations['nfts_processed']:\n",
+    "        get_collection_nfts_processed(collection_name, collection_folder_path)\n",
     "    if operations['txs']:\n",
-    "        get_collection_txs(collection_name)"
+    "        get_collection_txs(collection_name, collection_folder_path)"
    ]
   }
  ],
@@ -129,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
