--- a/new/get_data.ipynb
+++ b/new/get_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_folder_path = 'data'\n",
     "collections = ['CRMYTH-546419', 'CRWEAPONS-e5ab49', 'GSPACEAPE-08bc2b', 'CEA-2d29f9', 'CRCHAMPS-d0265d', 'CRHEROES-9edff2', 'EAPES-8f3c1f']\n",
+    "collections = ['CRWEAPONS-e5ab49']\n",
+    "\n",
     "operations = {\n",
     "    'info': True,\n",
     "    'nfts_raw': True,\n",
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,10 +73,8 @@
     "        json.dump(collection_info, f, indent=4)\n",
     "    return\n",
     "\n",
-    "def get_collection_nfts_raw(collection_name, collection_folder_path, params):\n",
+    "def get_collection_nfts_raw(collection_name, collection_folder_path, sleep_time, whitelist):\n",
     "    collection_nfts = mu.get_collection_nfts(collection_name)\n",
-    "    sleep_time = params[collection_name]['sleep_time']\n",
-    "    whitelist = params[collection_name]['whitelist']\n",
     "    collection_offchain_data = mu.get_collection_offchain_data(collection_nfts, sleep_time=sleep_time, whitelist=whitelist)\n",
     "    for identifier in collection_nfts:\n",
     "        collection_nfts[identifier]['offchain_data'] = collection_offchain_data[identifier]\n",
@@ -118,15 +118,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "get_collection_nfts('CRMYTH-546419'): 100%|██████████| 584/584 [00:03<00:00, 192.86it/s]\n",
-      "get_collection_offchain_data('CRMYTH-546419'): 100%|██████████| 584/584 [10:20<00:00,  1.06s/it]  \n"
+      "get_collection_nfts('CRWEAPONS-e5ab49'): 100%|██████████| 2983/2983 [00:16<00:00, 181.09it/s]\n",
+      "get_collection_offchain_data('CRWEAPONS-e5ab49'): 100%|██████████| 2983/2983 [55:44<00:00,  1.12s/it]   \n"
      ]
     }
    ],
@@ -138,7 +138,7 @@
     "    if operations['info']:\n",
     "        get_collection_info(collection_name, collection_folder_path)\n",
     "    if operations['nfts_raw']:\n",
-    "        get_collection_nfts_raw(collection_name, collection_folder_path, params)\n",
+    "        get_collection_nfts_raw(collection_name, collection_folder_path, params[collection_name]['sleep_time'], params[collection_name]['whitelist'])\n",
     "    if operations['nfts_processed']:\n",
     "        get_collection_nfts_processed(collection_name, collection_folder_path)\n",
     "    if operations['txs']:\n",
