--- a/new/get_data.ipynb
+++ b/new/get_data.ipynb
@@ -8,20 +8,18 @@
    "source": [
     "import multiversx_utils as mu\n",
     "import json\n",
-    "import pandas as pd\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_folder_path = 'data'\n",
     "collections = ['CRMYTH-546419', 'CRWEAPONS-e5ab49', 'GSPACEAPE-08bc2b', 'CEA-2d29f9', 'CRCHAMPS-d0265d', 'CRHEROES-9edff2', 'EAPES-8f3c1f']\n",
-    "collections = ['CRWEAPONS-e5ab49']\n",
-    "\n",
+    "collections = ['GSPACEAPE-08bc2b', 'CEA-2d29f9', 'CRCHAMPS-d0265d', 'CRHEROES-9edff2', 'EAPES-8f3c1f']\n",
     "operations = {\n",
     "    'info': True,\n",
     "    'nfts_raw': True,\n",
@@ -62,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +75,7 @@
     "    collection_nfts = mu.get_collection_nfts(collection_name)\n",
     "    collection_offchain_data = mu.get_collection_offchain_data(collection_nfts, sleep_time=sleep_time, whitelist=whitelist)\n",
     "    for identifier in collection_nfts:\n",
-    "        collection_nfts[identifier]['offchain_data'] = collection_offchain_data[identifier]\n",
+    "        collection_nfts[identifier]['offchainData'] = collection_offchain_data[identifier]\n",
     "    filename = os.path.join(collection_folder_path, 'nfts_raw.json')\n",
     "    with open(filename, 'w') as f:\n",
     "        json.dump(collection_nfts, f, indent=4)\n",
@@ -87,25 +85,12 @@
     "    filename = os.path.join(collection_folder_path, 'nfts_raw.json')\n",
     "    with open(filename, 'r') as f:\n",
     "        collection_nfts = json.load(f)\n",
-    "    collection = {}\n",
-    "    for nft in collection_nfts.values():\n",
-    "        nft_data = mu.parse_nft_data(nft)\n",
-    "        for key, value in nft_data.items():\n",
-    "            if key not in collection:\n",
-    "                collection[key] = []\n",
-    "            collection[key].append(value)\n",
-    "    filename = os.path.join(collection_folder_path, 'nfts_processed.csv')\n",
-    "    collection = pd.DataFrame(collection)\n",
-    "    collection.to_csv(filename, index=False)\n",
-    "    collection.index = collection['identifier']\n",
-    "    collection = collection.to_dict('index')\n",
-    "    for identifier, data in collection.items():\n",
-    "        for key, value in data.items():\n",
-    "            if pd.isna(value):\n",
-    "                collection[identifier][key] = None\n",
+    "    collection_nfts_processed = {}\n",
+    "    for identifier, nft in collection_nfts.items():\n",
+    "        collection_nfts_processed[identifier] = mu.parse_nft_data(nft)\n",
     "    filename = os.path.join(collection_folder_path, 'nfts_processed.json')\n",
     "    with open(filename, 'w') as f:\n",
-    "        json.dump(collection, f, indent=4)\n",
+    "        json.dump(collection_nfts_processed, f, indent=4)\n",
     "    return\n",
     "\n",
     "def get_collection_txs(collection_name, collection_folder_path):\n",
@@ -118,15 +103,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "get_collection_nfts('CRWEAPONS-e5ab49'): 100%|██████████| 2983/2983 [00:16<00:00, 181.09it/s]\n",
-      "get_collection_offchain_data('CRWEAPONS-e5ab49'): 100%|██████████| 2983/2983 [55:44<00:00,  1.12s/it]   \n"
+      "get_collection_nfts('GSPACEAPE-08bc2b'): 100%|██████████| 14192/14192 [01:21<00:00, 174.28it/s]\n",
+      "get_collection_offchain_data('GSPACEAPE-08bc2b'): 100%|██████████| 14192/14192 [1:44:33<00:00,  2.26it/s] \n",
+      "get_collection_nfts('CEA-2d29f9'): 100%|██████████| 2050/2050 [00:13<00:00, 151.63it/s]\n",
+      "get_collection_offchain_data('CEA-2d29f9'): 100%|██████████| 2050/2050 [15:38<00:00,  2.18it/s]\n",
+      "get_collection_nfts('CRCHAMPS-d0265d'): 100%|██████████| 598/598 [00:03<00:00, 163.24it/s]\n",
+      "get_collection_offchain_data('CRCHAMPS-d0265d'): 100%|██████████| 598/598 [21:01<00:00,  2.11s/it]  \n",
+      "get_collection_nfts('CRHEROES-9edff2'): 100%|██████████| 600/600 [00:02<00:00, 225.91it/s]\n",
+      "get_collection_offchain_data('CRHEROES-9edff2'): 100%|██████████| 600/600 [22:06<00:00,  2.21s/it]  \n",
+      "get_collection_nfts('EAPES-8f3c1f'): 100%|██████████| 10000/10000 [00:50<00:00, 198.82it/s]\n",
+      "get_collection_offchain_data('EAPES-8f3c1f'): 100%|██████████| 10000/10000 [09:49<00:00, 16.97it/s]\n"
      ]
     }
    ],
