--- a/new/get_data.ipynb
+++ b/new/get_data.ipynb
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_folder_path = 'data'\n",
     "collections = ['CRMYTH-546419', 'CRWEAPONS-e5ab49', 'GSPACEAPE-08bc2b', 'CEA-2d29f9', 'CRCHAMPS-d0265d', 'CRHEROES-9edff2', 'EAPES-8f3c1f']\n",
-    "collections = ['GSPACEAPE-08bc2b', 'CEA-2d29f9', 'CRCHAMPS-d0265d', 'CRHEROES-9edff2', 'EAPES-8f3c1f']\n",
+    "collections = ['CRWEAPONS-e5ab49']\n",
     "operations = {\n",
     "    'info': True,\n",
     "    'nfts_raw': True,\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,23 +103,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "get_collection_nfts('GSPACEAPE-08bc2b'): 100%|██████████| 14192/14192 [01:21<00:00, 174.28it/s]\n",
-      "get_collection_offchain_data('GSPACEAPE-08bc2b'): 100%|██████████| 14192/14192 [1:44:33<00:00,  2.26it/s] \n",
-      "get_collection_nfts('CEA-2d29f9'): 100%|██████████| 2050/2050 [00:13<00:00, 151.63it/s]\n",
-      "get_collection_offchain_data('CEA-2d29f9'): 100%|██████████| 2050/2050 [15:38<00:00,  2.18it/s]\n",
-      "get_collection_nfts('CRCHAMPS-d0265d'): 100%|██████████| 598/598 [00:03<00:00, 163.24it/s]\n",
-      "get_collection_offchain_data('CRCHAMPS-d0265d'): 100%|██████████| 598/598 [21:01<00:00,  2.11s/it]  \n",
-      "get_collection_nfts('CRHEROES-9edff2'): 100%|██████████| 600/600 [00:02<00:00, 225.91it/s]\n",
-      "get_collection_offchain_data('CRHEROES-9edff2'): 100%|██████████| 600/600 [22:06<00:00,  2.21s/it]  \n",
-      "get_collection_nfts('EAPES-8f3c1f'): 100%|██████████| 10000/10000 [00:50<00:00, 198.82it/s]\n",
-      "get_collection_offchain_data('EAPES-8f3c1f'): 100%|██████████| 10000/10000 [09:49<00:00, 16.97it/s]\n"
+      "get_collection_nfts('CRWEAPONS-e5ab49'): 100%|██████████| 3214/3214 [00:20<00:00, 156.39it/s]\n",
+      "get_collection_offchain_data('CRWEAPONS-e5ab49'): 100%|██████████| 3214/3214 [1:12:18<00:00,  1.35s/it] \n"
      ]
     }
    ],
